modify getReceipts filter